Added pos_weight, hit_penalty to config ...

--- a/runner.ipynb
+++ b/runner.ipynb
@@ -96,8 +96,8 @@
     "\n",
     "###### Loss ----------------------------------------------------------------------\n",
     "loss: # Just good ol' CrossEntropy\n",
-    "  label_smoothing: 0.0\n",
-    "  ctc_weight: 0.2\n",
+    "  pos_weight                  : 21.0 # Positive weight for hit loss (21 for train set)\n",
+    "  hit_penalty                 : 21.0 # Hit penalty for hit loss (2 for train set)\n",
     "\n",
     "###### Optimizer -----------------------------------------------------------------\n",
     "optimizer:\n",
