--- a/runner.ipynb
+++ b/runner.ipynb
@@ -66,9 +66,9 @@
     "\n",
     "###### Dataset -----------------------------------------------------------------\n",
     "data:\n",
-    "    train_path: \"dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_train.pkl\"\n",
-    "    val_path: \"dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_val.pkl\"\n",
-    "    test_path: \"dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_test.pkl\"\n",
+    "    train_path: \"dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_train.pkl\"\n",
+    "    val_path: \"dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_val.pkl\"\n",
+    "    test_path: \"dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_test.pkl\"\n",
     "    num_bars: 2\n",
     "    feature_type: \"fixed\"  # [fixed, flexible]\n",
     "    steps_per_quarter: 4\n",
@@ -210,15 +210,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_train.pkl...\n",
-      "Processing 6578 samples...\n"
+      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_train.pkl...\n",
+      "Processing 15340 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 6578/6578 [00:01<00:00, 5399.37sample/s]\n"
+      "Accumulating:: 100%|██████████| 15340/15340 [00:02<00:00, 5465.44sample/s]\n"
      ]
     },
     {
@@ -226,20 +226,17 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 6578 samples.\n",
+      "Loaded and processed 15340 samples.\n",
       "\n",
-      "Number of negative samples in fixed grid: 6778010\n",
-      "Number of positive samples in fixed grid: 398096\n",
-      "pos_weight: 17.02606964111328\n",
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_val.pkl...\n",
-      "Processing 813 samples...\n"
+      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_val.pkl...\n",
+      "Processing 1916 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 813/813 [00:00<00:00, 5500.94sample/s]"
+      "Accumulating:: 100%|██████████| 1916/1916 [00:00<00:00, 6190.27sample/s]\n"
      ]
     },
     {
@@ -247,33 +244,17 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 813 samples.\n",
-      "\n"
+      "Loaded and processed 1916 samples.\n",
+      "\n",
+      "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_test.pkl...\n",
+      "Processing 1918 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of negative samples in fixed grid: 806458\n",
-      "Number of positive samples in fixed grid: 45316\n",
-      "pos_weight: 17.79631996154785\n",
-      "Loading dataset from: dataset/serialized/merged_ts=4-4_tr0.80-va0.10-te0.10_test.pkl...\n",
-      "Processing 812 samples...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Accumulating:: 100%|██████████| 812/812 [00:00<00:00, 5198.33sample/s]"
+      "Accumulating:: 100%|██████████| 1918/1918 [00:00<00:00, 6298.87sample/s]\n"
      ]
     },
     {
@@ -281,24 +262,8 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 812 samples.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of negative samples in fixed grid: 871512\n",
-      "Number of positive samples in fixed grid: 50314\n",
-      "pos_weight: 17.321460723876953\n",
+      "Loaded and processed 1918 samples.\n",
+      "\n",
       "Grid shape: torch.Size([16, 33, 9, 3])\n",
       "Samples shape: 16\n"
      ]
@@ -491,10 +456,10 @@
       "📈 Configuring Learning Rate Scheduler:\n",
       "├── Type: COSINE\n",
       "├── Cosine Annealing Settings:\n",
-      "│   ├── T_max: 15 epochs (6180 steps)\n",
+      "│   ├── T_max: 15 epochs (14385 steps)\n",
       "│   └── Min LR: 1e-07\n",
       "├── Warmup Settings:\n",
-      "│   ├── Duration: 5 epochs (2060 steps)\n",
+      "│   ├── Duration: 5 epochs (4795 steps)\n",
       "│   ├── Start Factor: 0.1\n",
       "│   └── End Factor: 1.0\n"
      ]
@@ -535,6 +500,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[Training IQAE]:   0%|          | 0/959 [00:00<?, ?it/s]/Users/puruboii/miniconda3/envs/thesis/lib/python3.12/site-packages/torch/optim/lr_scheduler.py:227: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+      "  warnings.warn(\n",
       "                                                                                                                                                                                                                                                    \r"
      ]
     },
@@ -549,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                            \r"
+      "                                                             \r"
      ]
     },
     {
@@ -559,19 +526,19 @@
       "\n",
       "📊 Metrics (Epoch 0):\n",
       "├── TRAIN:\n",
-      "│   ├── hit_bce: 1.3998\n",
-      "│   ├── joint_loss: 1.6342\n",
+      "│   ├── hit_bce: 1.4442\n",
+      "│   ├── joint_loss: 1.6226\n",
       "│   ├── margin_loss: 0.0000\n",
-      "│   ├── offset_mse: 0.0388\n",
+      "│   ├── offset_mse: 0.0445\n",
       "│   ├── temporal_loss: 0.0000\n",
-      "│   └── velocity_mse: 0.1955\n",
+      "│   └── velocity_mse: 0.1340\n",
       "└── VAL:\n",
-      "    ├── hit_acc: 0.7382\n",
-      "    ├── hit_f1: 0.3996\n",
-      "    ├── hit_ppv: 0.2708\n",
-      "    ├── hit_tpr: 0.8475\n",
-      "    ├── offset_mse: 0.0043\n",
-      "    └── velocity_mse: 0.1315\n",
+      "    ├── hit_acc: 0.7281\n",
+      "    ├── hit_f1: 0.4013\n",
+      "    ├── hit_ppv: 0.2855\n",
+      "    ├── hit_tpr: 0.7862\n",
+      "    ├── offset_mse: 0.0018\n",
+      "    └── velocity_mse: 0.1723\n",
       "└── TRAINING:\n",
       "    └── learning_rate: 0.000112\n"
      ]
