--- a/runner.ipynb
+++ b/runner.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'thesis' already exists and is not an empty directory.\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace with your token and repo URL\n",
     "token = \"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\"\n",
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +80,7 @@
     "    num_bars: 2\n",
     "    feature_type: \"fixed\"  # [fixed, flexible]\n",
     "    steps_per_quarter: 4\n",
-    "    subset: 0.05            # Fraction of the dataset to load\n",
+    "    subset: 0.01            # Fraction of the dataset to load\n",
     "    num_workers: 0         # Number of workers for data loading\n",
     "    batch_size: 16         # Batch size\n",
     "\n",
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,14 +219,14 @@
      "output_type": "stream",
      "text": [
       "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_train.pkl...\n",
-      "Processing 15340 samples...\n"
+      "Processing 3068 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 15340/15340 [00:02<00:00, 5465.44sample/s]\n"
+      "Accumulating:: 100%|██████████| 3068/3068 [00:00<00:00, 6138.97sample/s]\n"
      ]
     },
     {
@@ -226,17 +234,17 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 15340 samples.\n",
+      "Loaded and processed 3068 samples.\n",
       "\n",
       "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_val.pkl...\n",
-      "Processing 1916 samples...\n"
+      "Processing 383 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 1916/1916 [00:00<00:00, 6190.27sample/s]\n"
+      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6326.50sample/s]\n"
      ]
     },
     {
@@ -244,17 +252,17 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 1916 samples.\n",
+      "Loaded and processed 383 samples.\n",
       "\n",
       "Loading dataset from: dataset/serialized/merged_ts=4-4_2bar_tr0.80-va0.10-te0.10_test.pkl...\n",
-      "Processing 1918 samples...\n"
+      "Processing 383 samples...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 1918/1918 [00:00<00:00, 6298.87sample/s]\n"
+      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 2398.98sample/s]\n"
      ]
     },
     {
@@ -262,7 +270,7 @@
      "output_type": "stream",
      "text": [
       "Skipped 0 samples due to errors.\n",
-      "Loaded and processed 1918 samples.\n",
+      "Loaded and processed 383 samples.\n",
       "\n",
       "Grid shape: torch.Size([16, 33, 9, 3])\n",
       "Samples shape: 16\n"
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -377,32 +385,30 @@
        "│    └─AxialPositionalEmbedding: 2-2                    [16, 32, 33, 9]           1,344\n",
        "│    └─Sequential: 2-3                                  [16, 32, 33, 9]           --\n",
        "│    │    └─ModuleList: 3-1                             --                        156,288\n",
-       "├─AdaptiveAvgPool2d: 1-2                                [16, 33, 3, 3]            --\n",
-       "├─Linear: 1-3                                           [16, 33, 2]               20\n",
-       "├─IntegerQuantizer: 1-4                                 [16, 33]                  --\n",
-       "├─Linear: 1-5                                           [16, 33, 32]              896\n",
+       "├─Linear: 1-2                                           [16, 33, 9]               297\n",
+       "├─Linear: 1-3                                           [16, 33, 32]              896\n",
+       "├─PositionalEncoding: 1-4                               [16, 33, 32]              --\n",
+       "├─Linear: 1-5                                           [16, 33, 32]              320\n",
        "├─PositionalEncoding: 1-6                               [16, 33, 32]              --\n",
-       "├─Linear: 1-7                                           [16, 33, 32]              320\n",
-       "├─PositionalEncoding: 1-8                               [16, 33, 32]              --\n",
-       "├─TransformerDecoder: 1-9                               [16, 33, 32]              --\n",
+       "├─TransformerDecoder: 1-7                               [16, 33, 32]              --\n",
        "│    └─ModuleList: 2-4                                  --                        --\n",
        "│    │    └─TransformerDecoderLayer: 3-2                [16, 33, 32]              141,792\n",
        "│    └─LayerNorm: 2-5                                   [16, 33, 32]              64\n",
-       "├─Linear: 1-10                                          [16, 33, 27]              891\n",
+       "├─Linear: 1-8                                           [16, 33, 27]              891\n",
        "=========================================================================================================\n",
-       "Total params: 301,770\n",
-       "Trainable params: 301,770\n",
+       "Total params: 302,047\n",
+       "Trainable params: 302,047\n",
        "Non-trainable params: 0\n",
        "Total mult-adds (Units.MEGABYTES): 707.83\n",
        "=========================================================================================================\n",
        "Input size (MB): 0.06\n",
-       "Forward/backward pass size (MB): 38.92\n",
+       "Forward/backward pass size (MB): 38.95\n",
        "Params size (MB): 1.17\n",
-       "Estimated Total Size (MB): 40.15\n",
+       "Estimated Total Size (MB): 40.18\n",
        "========================================================================================================="
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -456,10 +462,10 @@
       "📈 Configuring Learning Rate Scheduler:\n",
       "├── Type: COSINE\n",
       "├── Cosine Annealing Settings:\n",
-      "│   ├── T_max: 15 epochs (14385 steps)\n",
+      "│   ├── T_max: 15 epochs (2880 steps)\n",
       "│   └── Min LR: 1e-07\n",
       "├── Warmup Settings:\n",
-      "│   ├── Duration: 5 epochs (4795 steps)\n",
+      "│   ├── Duration: 5 epochs (960 steps)\n",
       "│   ├── Start Factor: 0.1\n",
       "│   └── End Factor: 1.0\n"
      ]
@@ -493,14 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training IQAE]:   0%|          | 0/959 [00:00<?, ?it/s]/Users/puruboii/miniconda3/envs/thesis/lib/python3.12/site-packages/torch/optim/lr_scheduler.py:227: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
+      "[Training IQAE]:   0%|          | 0/192 [00:00<?, ?it/s]/Users/puruboii/miniconda3/envs/thesis/lib/python3.12/site-packages/torch/optim/lr_scheduler.py:227: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
       "  warnings.warn(\n",
       "                                                                                                                                                                                                                                                    \r"
      ]
@@ -509,14 +515,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max_length: 33\n"
+      "button_hvo: tensor([[1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [1., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 0., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.],\n",
+      "        [0., 1., 1.]], grad_fn=<SelectBackward0>)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                             \r"
+      "                                                            \r"
      ]
     },
     {
@@ -526,19 +564,19 @@
       "\n",
       "📊 Metrics (Epoch 0):\n",
       "├── TRAIN:\n",
-      "│   ├── hit_bce: 1.4442\n",
-      "│   ├── joint_loss: 1.6226\n",
+      "│   ├── hit_bce: 1.7699\n",
+      "│   ├── joint_loss: 2.5736\n",
       "│   ├── margin_loss: 0.0000\n",
-      "│   ├── offset_mse: 0.0445\n",
-      "│   ├── temporal_loss: 0.0000\n",
-      "│   └── velocity_mse: 0.1340\n",
+      "│   ├── offset_mse: 0.0535\n",
+      "│   ├── temporal_loss: 0.5063\n",
+      "│   └── velocity_mse: 0.2438\n",
       "└── VAL:\n",
-      "    ├── hit_acc: 0.7281\n",
-      "    ├── hit_f1: 0.4013\n",
-      "    ├── hit_ppv: 0.2855\n",
-      "    ├── hit_tpr: 0.7862\n",
-      "    ├── offset_mse: 0.0018\n",
-      "    └── velocity_mse: 0.1723\n",
+      "    ├── hit_acc: 0.5941\n",
+      "    ├── hit_f1: 0.2918\n",
+      "    ├── hit_ppv: 0.1865\n",
+      "    ├── hit_tpr: 0.7788\n",
+      "    ├── offset_mse: 0.0068\n",
+      "    └── velocity_mse: 0.1917\n",
       "└── TRAINING:\n",
       "    └── learning_rate: 0.000112\n"
      ]
