--- a/runner.ipynb
+++ b/runner.ipynb
@@ -39,8 +39,8 @@
     "from torch.utils.data import DataLoader\n",
     "import numpy as np\n",
     "from torchinfo import summary\n",
-    "from models.IQAE import IQAE\n",
-    "from trainers import IQAE_Trainer\n",
+    "from models.GrooveIQ import GrooveIQ\n",
+    "from trainers import GrooveIQ_Trainer\n",
     "from utils import create_optimizer, create_scheduler\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using device: {device}\")"
@@ -87,11 +87,15 @@
     "###### Network Specs -------------------------------------------------------------\n",
     "model:\n",
     "    embed_dim: 32\n",
+    "    encoder_type: \"axial\" # [conv, temporal, spatial, mlp, axial]\n",
     "    encoder_depth: 1\n",
     "    encoder_heads: 1\n",
+    "    decoder_type: \"transformer\" # [transformer, gru, mlp, conv]\n",
     "    decoder_depth: 1\n",
     "    decoder_heads: 1\n",
-    "    num_buttons: 3\n",
+    "    num_buttons:   3\n",
+    "    num_bins_velocity: 8\n",
+    "    num_bins_offset:  16\n",
     "\n",
     "###### Common Training Parameters ------------------------------------------------\n",
     "training:\n",
@@ -103,7 +107,7 @@
     "  wandb_project               : \"Set-Project-Name-Here\" # wandb project to log to\n",
     "\n",
     "###### Loss ----------------------------------------------------------------------\n",
-    "loss: # Just good ol' CrossEntropy\n",
+    "loss:\n",
     "  pos_weight                  : 21.0 # Positive weight for hit loss (21 for train set)\n",
     "  hit_penalty                 : 21.0 # Hit penalty for hit loss (2 for train set)\n",
     "\n",
@@ -226,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 3068/3068 [00:00<00:00, 6138.97sample/s]\n"
+      "Accumulating:: 100%|██████████| 3068/3068 [00:00<00:00, 6311.81sample/s]\n"
      ]
     },
     {
@@ -244,7 +248,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6326.50sample/s]\n"
+      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6317.62sample/s]\n"
      ]
     },
     {
@@ -262,7 +266,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 2398.98sample/s]\n"
+      "Accumulating:: 100%|██████████| 383/383 [00:00<00:00, 6316.77sample/s]\n"
      ]
     },
     {
@@ -287,10 +291,10 @@
     "    subset   = config[\"data\"][\"subset\"]\n",
     ")\n",
     "\n",
-    "val_dataset = DrumMIDIDataset(\n",
+    "val_dataset  = DrumMIDIDataset(\n",
     "    path     = config[\"data\"][\"val_path\"],\n",
     "    num_bars = config[\"data\"][\"num_bars\"],\n",
-    "    feature_type = config[\"data\"][\"feature_type\"],\n",
+    "    feature_type      = config[\"data\"][\"feature_type\"],\n",
     "    steps_per_quarter = config[\"data\"][\"steps_per_quarter\"],\n",
     "    subset   = config[\"data\"][\"subset\"]\n",
     ")\n",
@@ -298,7 +302,7 @@
     "test_dataset = DrumMIDIDataset(\n",
     "    path     = config[\"data\"][\"test_path\"],\n",
     "    num_bars = config[\"data\"][\"num_bars\"],\n",
-    "    feature_type = config[\"data\"][\"feature_type\"],\n",
+    "    feature_type      = config[\"data\"][\"feature_type\"],\n",
     "    steps_per_quarter = config[\"data\"][\"steps_per_quarter\"],\n",
     "    subset   = config[\"data\"][\"subset\"]\n",
     ")\n",
@@ -309,7 +313,7 @@
     "    batch_size = config[\"data\"][\"batch_size\"],\n",
     "    num_workers = config[\"data\"][\"num_workers\"],\n",
     "    shuffle = True,\n",
-    "    collate_fn = lambda batch: train_dataset.collate_fn(batch, train_dataset),\n",
+    "    collate_fn = train_dataset.collate_fn,\n",
     "    pin_memory = True\n",
     ")\n",
     "\n",
@@ -318,7 +322,7 @@
     "    batch_size = config[\"data\"][\"batch_size\"],\n",
     "    num_workers = config[\"data\"][\"num_workers\"],\n",
     "    shuffle = True,\n",
-    "    collate_fn = lambda batch: val_dataset.collate_fn(batch, val_dataset),\n",
+    "    collate_fn = val_dataset.collate_fn,\n",
     "    pin_memory = True\n",
     ")\n",
     "\n",
@@ -327,7 +331,7 @@
     "    batch_size = config[\"data\"][\"batch_size\"],\n",
     "    num_workers = config[\"data\"][\"num_workers\"],\n",
     "    shuffle = True,\n",
-    "    collate_fn = lambda batch: test_dataset.collate_fn(batch, test_dataset),\n",
+    "    collate_fn = test_dataset.collate_fn,\n",
     "    pin_memory = True\n",
     ")\n",
     "\n",
@@ -376,36 +380,37 @@
     {
      "data": {
       "text/plain": [
-       "=========================================================================================================\n",
-       "Layer (type:depth-idx)                                  Output Shape              Param #\n",
-       "=========================================================================================================\n",
-       "IQAE                                                    [16, 33, 9]               27\n",
-       "├─DrumAxialTransformer: 1-1                             [16, 33, 9, 32]           --\n",
-       "│    └─Conv2d: 2-1                                      [16, 32, 33, 9]           128\n",
-       "│    └─AxialPositionalEmbedding: 2-2                    [16, 32, 33, 9]           1,344\n",
-       "│    └─Sequential: 2-3                                  [16, 32, 33, 9]           --\n",
-       "│    │    └─ModuleList: 3-1                             --                        156,288\n",
-       "├─Linear: 1-2                                           [16, 33, 9]               297\n",
-       "├─Linear: 1-3                                           [16, 33, 32]              896\n",
-       "├─PositionalEncoding: 1-4                               [16, 33, 32]              --\n",
-       "├─Linear: 1-5                                           [16, 33, 32]              320\n",
-       "├─PositionalEncoding: 1-6                               [16, 33, 32]              --\n",
-       "├─TransformerDecoder: 1-7                               [16, 33, 32]              --\n",
-       "│    └─ModuleList: 2-4                                  --                        --\n",
-       "│    │    └─TransformerDecoderLayer: 3-2                [16, 33, 32]              141,792\n",
-       "│    └─LayerNorm: 2-5                                   [16, 33, 32]              64\n",
-       "├─Linear: 1-8                                           [16, 33, 27]              891\n",
-       "=========================================================================================================\n",
-       "Total params: 302,047\n",
-       "Trainable params: 302,047\n",
+       "==============================================================================================================\n",
+       "Layer (type:depth-idx)                                       Output Shape              Param #\n",
+       "==============================================================================================================\n",
+       "GrooveIQ                                                     [16, 33, 9]               27\n",
+       "├─DrumEncoderWrapper: 1-1                                    [16, 33, 9, 32]           --\n",
+       "│    └─DrumAxialTransformer: 2-1                             [16, 33, 9, 32]           --\n",
+       "│    │    └─Conv2d: 3-1                                      [16, 32, 33, 9]           128\n",
+       "│    │    └─AxialPositionalEmbedding: 3-2                    [16, 32, 33, 9]           1,344\n",
+       "│    │    └─Sequential: 3-3                                  [16, 32, 33, 9]           27,008\n",
+       "├─Linear: 1-2                                                [16, 33, 9, 1]            33\n",
+       "├─Linear: 1-3                                                [16, 33, 9]               297\n",
+       "├─LearnableBinsQuantizer: 1-4                                [16, 33, 3]               8\n",
+       "├─LearnableBinsQuantizer: 1-5                                [16, 33, 3]               16\n",
+       "├─Linear: 1-6                                                [16, 33, 32]              896\n",
+       "├─Linear: 1-7                                                [16, 33, 32]              320\n",
+       "├─DrumDecoderWrapper: 1-8                                    [16, 33, 27]              --\n",
+       "│    └─TransformerDecoder: 2-2                               [16, 33, 32]              --\n",
+       "│    │    └─ModuleList: 3-4                                  --                        141,792\n",
+       "│    │    └─LayerNorm: 3-5                                   [16, 33, 32]              64\n",
+       "│    └─Linear: 2-3                                           [16, 33, 27]              891\n",
+       "==============================================================================================================\n",
+       "Total params: 172,824\n",
+       "Trainable params: 172,824\n",
        "Non-trainable params: 0\n",
-       "Total mult-adds (Units.MEGABYTES): 707.83\n",
-       "=========================================================================================================\n",
+       "Total mult-adds (Units.MEGABYTES): 93.49\n",
+       "==============================================================================================================\n",
        "Input size (MB): 0.06\n",
-       "Forward/backward pass size (MB): 38.95\n",
-       "Params size (MB): 1.17\n",
-       "Estimated Total Size (MB): 40.18\n",
-       "========================================================================================================="
+       "Forward/backward pass size (MB): 29.28\n",
+       "Params size (MB): 0.66\n",
+       "Estimated Total Size (MB): 29.99\n",
+       "=============================================================================================================="
       ]
      },
      "execution_count": 7,
@@ -420,7 +425,7 @@
     "    E=grid.shape[2],\n",
     "    M=grid.shape[3]\n",
     ")\n",
-    "model = IQAE(**model_config)\n",
+    "model = GrooveIQ(**model_config)\n",
     "summary(model, input_data = grid, device = \"cpu\")"
    ]
   },
@@ -472,7 +477,7 @@
     }
    ],
    "source": [
-    "trainer = IQAE_Trainer(\n",
+    "trainer = GrooveIQ_Trainer(\n",
     "    model = model,\n",
     "    config = config,\n",
     "    run_name = config[\"expt\"],\n",
@@ -506,55 +511,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Training IQAE]:   0%|          | 0/192 [00:00<?, ?it/s]/Users/puruboii/miniconda3/envs/thesis/lib/python3.12/site-packages/torch/optim/lr_scheduler.py:227: UserWarning: Detected call of `lr_scheduler.step()` before `optimizer.step()`. In PyTorch 1.1.0 and later, you should call them in the opposite order: `optimizer.step()` before `lr_scheduler.step()`.  Failure to do this will result in PyTorch skipping the first value of the learning rate schedule. See more details at https://pytorch.org/docs/stable/optim.html#how-to-adjust-learning-rate\n",
-      "  warnings.warn(\n",
-      "                                                                                                                                                                                                                                                    \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "button_hvo: tensor([[1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 0., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.],\n",
-      "        [0., 1., 1.]], grad_fn=<SelectBackward0>)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                            \r"
+      "                                                                                                                         \r"
      ]
     },
     {
@@ -564,19 +521,38 @@
       "\n",
       "📊 Metrics (Epoch 0):\n",
       "├── TRAIN:\n",
-      "│   ├── hit_bce: 1.7699\n",
-      "│   ├── joint_loss: 2.5736\n",
-      "│   ├── margin_loss: 0.0000\n",
-      "│   ├── offset_mse: 0.0535\n",
-      "│   ├── temporal_loss: 0.5063\n",
-      "│   └── velocity_mse: 0.2438\n",
+      "│   ├── hit_acc: 0.5605\n",
+      "│   ├── hit_bce: 1.5207\n",
+      "│   ├── hit_f1: 0.3359\n",
+      "│   ├── hit_perplexity: 4.6709\n",
+      "│   ├── hit_ppv: 0.2064\n",
+      "│   ├── hit_tpr: 0.9168\n",
+      "│   ├── joint_loss: 1.9110\n",
+      "│   ├── offset_ahead: 0.2049\n",
+      "│   ├── offset_behind: 0.3441\n",
+      "│   ├── offset_mae: 0.0879\n",
+      "│   ├── offset_mse: 0.0534\n",
+      "│   ├── offset_penalty: 0.1111\n",
+      "│   ├── offset_tightness: 0.4954\n",
+      "│   ├── velocity_corr: 0.2903\n",
+      "│   ├── velocity_mae: 0.3219\n",
+      "│   ├── velocity_mse: 0.1519\n",
+      "│   ├── velocity_penalty: 0.0739\n",
+      "│   └── velocity_range_diff: 0.0508\n",
       "└── VAL:\n",
-      "    ├── hit_acc: 0.5941\n",
-      "    ├── hit_f1: 0.2918\n",
-      "    ├── hit_ppv: 0.1865\n",
-      "    ├── hit_tpr: 0.7788\n",
-      "    ├── offset_mse: 0.0068\n",
-      "    └── velocity_mse: 0.1917\n",
+      "    ├── hit_acc: 0.4379\n",
+      "    ├── hit_f1: 0.2433\n",
+      "    ├── hit_ppv: 0.1459\n",
+      "    ├── hit_tpr: 0.8085\n",
+      "    ├── offset_ahead: 0.1928\n",
+      "    ├── offset_behind: 0.4615\n",
+      "    ├── offset_mae: 0.1144\n",
+      "    ├── offset_mse: 0.0289\n",
+      "    ├── offset_tightness: 0.3773\n",
+      "    ├── velocity_corr: 0.1928\n",
+      "    ├── velocity_mae: 0.3722\n",
+      "    ├── velocity_mse: 0.2555\n",
+      "    └── velocity_range_diff: 0.0503\n",
       "└── TRAINING:\n",
       "    └── learning_rate: 0.000112\n"
      ]
